Add services and REST controllers for all features